--- a/configuration-management/ansible/roles/consul/templates/consul.j2
+++ b/configuration-management/ansible/roles/consul/templates/consul.j2
@@ -1,8 +1,10 @@
 {
-  "datacenter": "eu-west",
+  "datacenter": "euw",
   "data_dir": "/opt/consul",
   "log_level": "INFO",
   "server": true,
+  "ui": true,
+  "bind_add": SERVER_IP,
   "telemetry": {
      "statsite_address": "127.0.0.1:2180"
   }
